A LOT of changes

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <span onclick="toggleMainModal(true)" class="hk-subscribe-link">Subscribe to our newsletter</span>
       </div>
 
-      <ul class="hk-social">
+      <!-- <ul class="hk-social">
         <li class="hk-social-link">
           <a href="#" role="link">
             <span class="icon-socials ico-slack"></span>
@@ -159,16 +159,16 @@
             <span class="icon-socials ico-bitcoin"></span>
           </a>
         </li>
-      </ul>
+      </ul> -->
 
       <!--<button class="hk-report-button">-->
       <!--<span class="hk-report-icon"></span>-->
       <!--</button>-->
 
-      <div id="hk-language-select">
+      <!-- <div id="hk-language-select">
         <a class="hk-lang-eng active" href=""> Eng </a>
         <a class="hk-lang-ru" href=""> Ru </a>
-      </div>
+      </div> -->
     </header>
 
     <nav class="hk-navigation">
@@ -202,7 +202,7 @@
 
     <div class="hk-timer">
       <div class="hk-time">
-        <span class="hk-time-header">Time to start</span>
+        <span class="hk-time-header">Coin Sale Countdown</span>
 
         <div class="hk-bonus_timer-time__main">
 
@@ -255,14 +255,18 @@
       <div>
         <h2 class="">About project</h2>
         <hr />
-        <p class="hk-about-quote_text">Hacken is the first cybersecurity expertise decentralized cryptocurrency, build on Ethereum.</p>
-        <p class="hk-about-descr">
-          Hacken is the first cyber security expertise decentralized cryptocurrency, build on Ethereum. It creates the ecosystem for providing high quality cyber security services for the companies all around the world. The Token sale is powered by the CyberGuard
-          Company. CyberGuard accumulates and distributes the investments, controls the processes and develops the HackenProof platform a marketplace for the cyber security services.
+        <p class="hk-about-quote_text">
+          Hacken is the first custom-tailored decentralized token for cybersecurity professionals. It is based on Ethereum platform.
         </p>
         <p class="hk-about-descr">
-          The platform will allow users to purchase penetration test services for their products or systems. HackenProof will provide clients with the o fficial digital mark and certificate in case of successful completion of cybersecurity test.
-          <br /><br /> The tests will be run by the best teams of us white hackers.
+          Hacken Ecosystem is a community driven business organization created to nourish the connection between blockchain and cybersecurity communities, promote hacker ethics and encourage legitimate research of computer networks and software.
+          <br /><br />
+          Our ecosystem will allow customers to acquire high quality penetration test services and vulnerabilities assessment for their products. The whole process, as well as our findings, are timestamped and published
+        </p>
+        <p class="hk-about-descr">
+          to the blockchain-based HackenProof Vulnerabilities and Countermeasures Certificate, uniquely issued for each project.
+          <br /><br />
+          The services will be provided by a community white hat hackers centered around HackIT — the major Eastern European cybersecurity conference conducted annually in Kharkiv, Ukraine.
         </p>
       </div>
     </div>
@@ -273,27 +277,27 @@
         <h2>Timeline</h2>
         <div class="hk-timeline-figure absolute-center margin-none">
           <div class="hk-timeline-line-1">
-            <span class="hk-cell-1">10th August</span>
-            <span class="hk-cell-2">25th August</span>
-            <span class="hk-cell-3">5th September</span>
-            <span class="hk-cell-4">10th September</span>
+            <span class="hk-cell-1">August 10</span>
+            <span class="hk-cell-2">August 25</span>
+            <span class="hk-cell-3">September 5</span>
+            <span class="hk-cell-4">September 10</span>
           </div>
           <div class="hk-timeline-line-2">
-            <span class="hk-cell-1">Campain start</span>
-            <span class="hk-cell-2">Online CTF <br />challenge</span>
-            <span class="hk-cell-3">The Winners are  announced <br />and invited for HackIT week</span>
-            <span class="hk-cell-4">Presale</span>
+            <span class="hk-cell-1">Campain starts</span>
+            <span class="hk-cell-2">Online CTF <br />challenge Launch</span>
+            <span class="hk-cell-3">Winners of CTF Challenge announced <br />and invited to HackIT Cup</span>
+            <span class="hk-cell-4">HKN presale</span>
           </div>
           <div class="hk-timeline-line-3">
-            <span class="hk-cell-1">23rd September</span>
-            <span class="hk-cell-2">23-29 September</span>
-            <span class="hk-cell-3">30th September</span>
-            <span class="hk-cell-4">7th October</span>
+            <span class="hk-cell-1">September 23</span>
+            <span class="hk-cell-2">September 23—29</span>
+            <span class="hk-cell-3">September 30</span>
+            <span class="hk-cell-4">October 7</span>
           </div>
           <div class="hk-timeline-line-4">
-            <span class="hk-cell-1">HackIT conference</span>
-            <span class="hk-cell-2">HackIT Cup</span>
-            <span class="hk-cell-3">The Final Competition on <br />the biggest aircraft Mriya</span>
+            <span class="hk-cell-1">HackIT Conference</span>
+            <span class="hk-cell-2">HackIT Cup Days</span>
+            <span class="hk-cell-3">HackIT Cup Final on board <br />of AN-225 Mriya</span>
             <span class="hk-cell-4">Token Sale</span>
           </div>
         </div>
@@ -303,7 +307,7 @@
   <div class="hk-screen hk-hacken section">
     <div class="hk-central_block">
       <div class="not-relative">
-        <h2>What is Hacken</h2>
+        <h2>What is Hacken Ecosystem?</h2>
         <div class="hk-hacken-figure absolute-center margin-none">
           <div onclick="toggleHackenModal(true, 0)" id="hacken-1">Hacken accelerator <span class="info-icon"><i class="zmdi zmdi-info-outline"></i></span></div>
           <div onclick="toggleHackenModal(true, 1)" id="hacken-2">Annual HackIT <br />Conference <span class="info-icon"><i class="zmdi zmdi-info-outline"></i></span></div>
@@ -334,7 +338,7 @@
               <div class="hk-milestones-block_header-3">
                 <h4>3. Target Milestone</h4>
                 <hr />
-                <p>10 ,ln</p>
+                <p>10 mln</p>
               </div>
               <div class="hk-milestones-block_header-4">
                 <h4>4. Advanced Milestone</h4>
@@ -382,7 +386,7 @@
                   <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform
                   <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
                   <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
-                  <br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity
+                  <br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity analytics center
                 </p>
               </div>
             </div>
@@ -402,22 +406,21 @@
       </div>
     </div>
   </div>
+  <!-- <br /><br /> -->
   <div class="hk-screen hk-burning section">
     <div class="hk-central_block">
       <div>
         <h2 class="">Burning Haken model</h2>
         <hr />
-        <p class="hk-burning-quote_text">Hacken uses revolutionary burning model for the investors equity growth, instead of traditional profit share or buy-back schemes.</p>
+        <p class="hk-burning-quote_text">
+          Instead of profit-sharing or buy-back scheme, Hacken uses revolutionary burning model which makes it less volatile, ensures constant demand and controllable price of the services within our Ecosystem.        </p>
         <p class="hk-burning-descr">
-          Hacken uses revolutionary burning model for the investors equity growth, instead of traditional profit share or buy-back schemes.
-          <br /><br />All sales at HackenProof Marketplace and Hacken Accelerator are made in Hackens only. All profits from the operations earned are split in half. Half of the Hackens is deactivated and removed from the system and the other half is
-          send back for sale at the open market.
-          <br /><br />This model leads for long run investment attractiveness by disbalancing Hackens supply and demand.
+          Instead of traditional fiat money or other cryptocurrencies, all transactions via HackenProof and Hacken Accelerator are made in HKN only. All profits from the operations of Hacken Ecosystem are split in half. Half of these Hackens is then deactivated and removed from the system and the other half is send back to be sold at the open market.
         </p>
         <p class="hk-burning-descr">
-          Hacken Ecosystem development would lead to Hacken demand increase from the Clients and VC at the same time there would be less Hackens available due to its constant deactivation. Less investors will want to sell their Hackens which will permanently increase
-          Hackens market price.
-          <br /><br />Per mathematical calculations such model will lead to higher equity growth comparing with traditional profit share due to allocation of the profits from burned Hackens to long run investors.
+          This model leads for change the settled exchange rate of Hackens v. other crypto or fiat currencies, leading to lower volatility and improving liquidity. We need this to keep a decent price tag for vulnerability search services, attract more hackers to the platform, as well as ensure the stable and efficient maintenance of our Ecosystem.
+          <br /><br />
+          Hacken Ecosystem development would lead to Hacken demand increase from the Clients and VC at the same time there would be less Hackens available due to its constant deactivation.
         </p>
       </div>
     </div>
@@ -425,8 +428,8 @@
   <div class="hk-screen hk-details section">
     <div class="hk-central_block">
       <div>
-        <h2 class="">Token sale detailes</h2>
-        <hr />
+        <h2 class="">Token sale <br> details</h2>
+        <hr class="token-sale-hr" />
         <p class="hk-details-quote_text">Total supply: 20 mln Hackens. 1.3 mln at presale (1 mln + 30% bonus) and 18.7 mln at Token sale.<br />No future emissions</p>
         <div class="hk-details-panes_container">
           <div class="hk-details-pane">
@@ -453,7 +456,7 @@
       <div>
         <h2 class="">Bonuses</h2>
         <p>
-          Only just now you can get an extra bonuses
+          Only now you can get an extra bonuses
         </p>
         <div class="hk-bonuses-figure">
             <div class="hk-bonus_timer">
@@ -560,7 +563,7 @@
     <div class="hk-central_block">
       <div class="not-relative">
         <div class="block-title-with-pagination">
-          <h2>Executive team</h2>
+          <h2>Executive <br> team</h2>
           <div class="slider-pagination team">
             <div class="swiper-button-prev team"></div>
             <div class="swiper-pagination team"></div>
@@ -573,8 +576,8 @@
 
               <div class="swiper-slide"
               onclick="window.open('http://linkedin.com/in/dmytro-budorin-acca-56a98035 ', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
-                <img class="team-image" src="./src/img/team-8.jpg" alt="">
-                <img class="team-image-active" src="./src/img/team-8-active.jpg" alt="">
+                <img class="team-image" src="./src/img/team-8-active.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-8.jpg" alt="">
                 <div class="name">
                   Dmytro Budorin
                 </div>
@@ -707,18 +710,18 @@
         <div class="not-relative">
           <div class="block-title-with-pagination advisors">
             <h2>Advisors and Partners</h2>
-            <!-- <div class="slider-pagination advisors">
+            <div class="slider-pagination advisors">
               <div class="swiper-button-prev advisors "></div>
               <div class="swiper-pagination advisors"></div>
               <div class="swiper-button-next advisors"></div>
-            </div> -->
+            </div>
           </div>
           <div>
             <div class="advisors-slider">
               <div id="swiper-container-advisors" class="swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-1.jpg" alt="">
+                    <img class="advisor-image" src="./src/img/advisor-1.png" alt="">
                     <div class="name">
                       Oleksiy Matiiasevych
                     </div>
@@ -727,7 +730,7 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-2.jpg" alt="">
+                    <img class="advisor-image" src="./src/img/advisor-2.png" alt="">
                     <div class="name">
                       Artem Afyan
                     </div>
@@ -736,7 +739,16 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-3.jpg" alt="">
+                    <img class="advisor-image" src="./src/img/advisor-3.png" alt="">
+                    <div class="name">
+                      Den Beregovoy
+                    </div>
+                    <div class="member-description">
+                      Cryptoinvestor and enterpreneur
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="advisor-image" src="./src/img/advisor-4.png" alt="">
                     <div class="name">
                       Kharenko Michael
                     </div>
@@ -744,14 +756,15 @@
                       Legal and investment advisor, Sayenko Kharenko & partners
                     </div>
                   </div>
-                  <!-- <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-4.jpg" alt="">
+                  <div class="swiper-slide">
+                    <img class="advisor-image" src="./src/img/advisor-5.png" alt="">
                     <div class="name">
-                      Aleksandr Momot
+                      Vladymyr Krakovetskiy
                     </div>
                     <div class="member-description">
+                      Motivational speaker and  entrepreneur. CTO in MIG Robotics, co-founder of ChatBot Community Ukraine, founder of Smart Techno.
                     </div>
-                  </div> -->
+                  </div>
                 </div>
               </div>
             </div>
@@ -768,28 +781,28 @@
               <div id="swiper-container-partners" class="swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-axon.png" alt="">
+                    <img src="./src/img/logo-1.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-hackit.png" alt="">
+                    <img src="./src/img/logo-2.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-ambisafe.png" alt="">
+                    <img src="./src/img/logo-3.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-deloitte.png" alt="">
+                    <img src="./src/img/logo-4.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-axon.png" alt="">
+                    <img src="./src/img/logo-5.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-hackit.png" alt="">
+                    <img src="./src/img/logo-6.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-ambisafe.png" alt="">
+                    <img src="./src/img/logo-7.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-deloitte.png" alt="">
+                    <img src="./src/img/logo-8.png" alt="">
                   </div>
                 </div>
               </div>
@@ -800,7 +813,7 @@
                 <span onclick="toggleMainModal(true)" class="hk-subscribe-link">Subscribe to our newsletter</span>
               </div>
 
-              <ul class="hk-social">
+              <!-- <ul class="hk-social">
                 <li class="hk-social-link">
                   <a href="#" role="link">
                     <span class="icon-socials ico-slack"></span>
@@ -831,7 +844,7 @@
                     <span class="icon-socials ico-bitcoin"></span>
                   </a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </div>
