Pdf download and some texts changes

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <h1>Dedicated <span class="hk-text_blue">cryptocurrency</span><br /><span class="hk-text_bold">for white hat hackers</span></h1>
         <p>Invest into the safe data future</p>
         <div class="main-page-links">
-          <a href=""><span class="hk-pdf">PDF</span>Whitepaper</a>
+          <a href="./src/files/HackenWP.pdf"><span class="hk-pdf">PDF</span>Whitepaper</a>
           <a href=""><span class="hk-video"><i class="zmdi zmdi-play-circle"></i></i></span>Watch video</a>
         </div>
       </div>
@@ -579,10 +579,10 @@
                 <img class="team-image" src="./src/img/team-8-active.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-8.jpg" alt="">
                 <div class="name">
-                  Dmytro Budorin
+                  Budorin Dmytro
                 </div>
                 <div class="work">
-                  CFO and the Lead Manager
+                  Lead manager and CFO
                 </div>
                 <div class="member-description">
                   Dmytro is ACCA, he worked for Deloitte for 8 years and became the winner of Deloitte CIS Audit Challenge with his Audit BigData SAP solution which was widely implemented in CIS offices.
@@ -598,7 +598,7 @@
                   Nikita Knysh
                 </div>
                 <div class="work">
-                  Community Director
+                  White hat community director
                 </div>
                 <div class="member-description">
                   Mykyta specializes in cybersecurity training for various government institutions of Ukraine. He is CEO of ProtectMaster, one of Ukraine’s oldest and reputable cybersecurity firms. Mykyta is cybersecurity advisor to the Administration of the President of Ukraine and co-founder of HackIT Conference.
@@ -610,48 +610,13 @@
                 <img class="team-image" src="./src/img/team-7.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-7-active.jpg" alt="">
               <div class="name">
-                  Dr. Yegor Aushev
+                  Yegor Aushev
                 </div>
                 <div class="work">
-                  Сhief Operating Officer
+                  Business development director
                 </div>
                 <div class="member-description">
                   Yegor holds Ph.D. in High Energy Physics from DESY, Hamburg. He is author of 22 scientific papers in this field. Since 2015 Yegor is CEO of Information Security Group — boutique cybersecurity firm providing penetration testing, data protection services and information security audit.                </div>
-              </div>
-
-              <div class="swiper-slide"
-              onclick="window.open('https://www.linkedin.com/in/lyubomyr-pavlyk-111a4b48/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
-                <img class="team-image" src="./src/img/team-3.jpg" alt="">
-                <img class="team-image-active" src="./src/img/team-3-active.jpg" alt="">
-                <div class="name">
-                  Lyubomyr Pavlyk
-                </div>
-                <div class="work">
-                  Community Director
-                </div>
-                <div class="member-description">
-                  Lyubomyr holds Bachelor's Degree in Finance and finished PreDevelopment Program
-                  Msc in Innovations and Entrepreneurship in LvBS (Lviv Business School).
-                  More than 10 years of management experience in insurance and fintech, last 6 in Vienna Insurance Group subsidiary (USG).
-                  He is serial entrepreneur, trader, investment adviser and a founder and CEO of IT company "Elearnio"
-                </div>
-              </div>
-
-              <div class="swiper-slide"
-              onclick="window.open('https://www.linkedin.com/in/olga-samoilova-52506964', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
-                <img class="team-image" src="./src/img/team-5.jpg" alt="">
-                <img class="team-image-active" src="./src/img/team-5-active.jpg" alt="">
-                <div class="name">
-                  Olga Samoilova
-                </div>
-                <div class="work">
-                  ICO Project manager
-                </div>
-                <div class="member-description">
-                  Speaker of the Hacken Project at Global conferences.
-                  More than 10 years of parliamentary debating, finalist and winner of several international debate tournaments. Preparation of the Official Fan-Zone infrastructure of the Final part of UEFA EURO 2012 Football Championship in Kyiv and Donetsk.
-                  http://ura.dn.ua/24.02.2011/107735.html
-                </div>
               </div>
 
               <div class="swiper-slide"
@@ -662,9 +627,26 @@
                   Vladimir Taratushka
                 </div>
                 <div class="work">
-                  HackIT Conference Director
+                  HackIT conference director
                 </div>
                 <div class="member-description">
+                </div>
+              </div>
+
+              <div class="swiper-slide"
+              onclick="window.open('http://linkedin.com/in/andriimatiukhin', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-1.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-1-active.jpg" alt="">
+                <div class="name">
+                  Andrii Matiukhin
+                </div>
+                <div class="work">
+                  HackenProof technical director
+                </div>
+                <div class="member-description-last">
+                  Andrii high qualified cyber security expert with 13 years of successful career path in industry. Worked for corporate customers and system integrators.
+                  Successfully drive complex technical solutions for a dozen projects in several countries for commercial companies and Government Agency, National Banks, Olympic Games. He is a certified expert in several areas, has more than 10 certificates of competence.
+                  His role in project is to provide technology leadership for developing, integrating, and supporting of Platform.
                 </div>
               </div>
 
@@ -676,28 +658,46 @@
                   Evgenia Broshevan
                 </div>
                 <div class="work">
-                  HackIT Coordinator
+                  HackIT conference manager
                 </div>
                 <div class="member-description">
                   Evgenia has Master’s degree in Cybersecurity and is is a co-founder of Kharkiv DEFCON Group. She is the winner of All-Ukrainian contest of students research works, has taken part in numerous scientific conferences and summer schools both in Ukraine and in Europe. Evgenia has organized a range of cybersecurity and blockchain events. The role in Hacken project is to coordinate HackIT activities.                </div>
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('http://linkedin.com/in/andriimatiukhin', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
-                <img class="team-image" src="./src/img/team-1.jpg" alt="">
-                <img class="team-image-active" src="./src/img/team-1-active.jpg" alt="">
+              onclick="window.open('https://www.linkedin.com/in/olga-samoilova-52506964', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-5.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-5-active.jpg" alt="">
                 <div class="name">
-                  Andrii Matiukhin
+                  Olga Samoilova
                 </div>
                 <div class="work">
-                  Chief Technical Officer
+                  Public relations manager
                 </div>
-                <div class="member-description-last">
-                  Andrii high qualified cyber security expert with 13 years of successful career path in industry. Worked for corporate customers and system integrators.
-                  Successfully drive complex technical solutions for a dozen projects in several countries for commercial companies and Government Agency, National Banks, Olympic Games. He is a certified expert in several areas, has more than 10 certificates of competence.
-                  His role in project is to provide technology leadership for developing, integrating, and supporting of Platform.
+                <div class="member-description">
+                  Speaker of the Hacken Project at Global conferences.
+                  More than 10 years of parliamentary debating, finalist and winner of several international debate tournaments. Preparation of the Official Fan-Zone infrastructure of the Final part of UEFA EURO 2012 Football Championship in Kyiv and Donetsk.
+                  http://ura.dn.ua/24.02.2011/107735.html
+                </div>
               </div>
-            </div>
+
+              <div class="swiper-slide"
+              onclick="window.open('https://www.linkedin.com/in/lyubomyr-pavlyk-111a4b48/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+                <img class="team-image" src="./src/img/team-3.jpg" alt="">
+                <img class="team-image-active" src="./src/img/team-3-active.jpg" alt="">
+                <div class="name">
+                  Lyubomyr Pavlyk
+                </div>
+                <div class="work">
+                  Public relations manager
+                </div>
+                <div class="member-description">
+                  Lyubomyr holds Bachelor's Degree in Finance and finished PreDevelopment Program
+                  Msc in Innovations and Entrepreneurship in LvBS (Lviv Business School).
+                  More than 10 years of management experience in insurance and fintech, last 6 in Vienna Insurance Group subsidiary (USG).
+                  He is serial entrepreneur, trader, investment adviser and a founder and CEO of IT company "Elearnio"
+                </div>
+              </div>
           </div>
         </div>
       </div>
@@ -735,8 +735,7 @@
                       Artem Afyan
                     </div>
                     <div class="member-description">
-                      Escrow agent, legal engineer with solid expertise in providing legal support for the cryptocurrency business, managing partner at Juscutum
-                    </div>
+                      Escrow agent, legal engineer with solid expertise in providing legal support for the cryptocurrency business, managing partner at Juscutum                    </div>
                   </div>
                   <div class="swiper-slide">
                     <img class="advisor-image" src="./src/img/advisor-3.png" alt="">
@@ -744,7 +743,7 @@
                       Den Beregovoy
                     </div>
                     <div class="member-description">
-                      Cryptoinvestor and enterpreneur
+                      Token sale legal advisor partner & co-founder at Axon Partners
                     </div>
                   </div>
                   <div class="swiper-slide">
