--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hacken</title>
+  <link rel="shortcut icon" href="./src/img/favicon.png" type="image/x-icon">
 
   <!-- CSS FILES -->
   <link href="src/css/style.css" rel="stylesheet">
